todos-app/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:
  replicas: 2
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
       - name: todo-backend-app
         image: rafaltaraska/todo-backend:1.0.0
         ports:
           - containerPort: 8000
