todos-app/k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: database

spec:
  replicas: 1
  selector:
    matchLabels:
      component: database
  template:
    metadata:
      labels:
        component: database
    spec:
      containers:
       - name: mongodb
         image: mongo
         ports:
           - containerPort: 27017
