todos-app/k8s/mongodb-pod.yaml
apiVersion: v1
kind: Pod

metadata:
 name: mongodb
 labels:
   component: database

spec:
 containers:
   - name: mongodb
     image: mongo
     ports:
       - containerPort: 27017
