todos-app/k8s/backend-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-cluster-ip-service

spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
   component: backend
