todos-app/k8s/frontend-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-cluster-ip-service

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
   component: frontend
