todos-app/k8s/mongodb-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb-cluster-ip-service

spec:
  ports:
   - name: db
     protocol: TCP
     port: 27017
     targetPort: 27017
  selector:
   component: database
